# Stochastic_Whale_Migration

./: .gitignore  MATH113B_Whale_Migration.ipynb  README.md  pyproject.toml
src/whale_sim/: agents.py  config.py  environment.py  main.py  utils.py
