[project]
name = "stochastic-whale-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "affine>=2.4.0",
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]
